- Fixed dark mode secondary-bg and tertiary-bg colors.

--- a/src/scss/vars/_colors-dark.scss
+++ b/src/scss/vars/_colors-dark.scss
@@ -2,10 +2,10 @@
 $body-bg-dark: color-shade($gray, 900) !default;
 $body-color-dark: color-shade($gray, 200) !default;
 
-$body-secondary-bg-dark: color-shade($gray, 700) !default;
+$body-secondary-bg-dark: color-shade($gray, 800) !default;
 $body-secondary-color-dark: fade($body-color-dark, .7) !default;
 
-$body-tertiary-bg-dark: color-shade($gray, 800) !default;
+$body-tertiary-bg-dark: color-shade($gray, 850) !default;
 $body-tertiary-color-dark: fade($body-color-dark, .5) !default;
 
 $emphasis-color-dark: $white !default;
